@startuml
class com.omasba.clairaud.presentation.auth.model.AuthViewModel {
-  _uiState
+  uiState
+ void onEmailChanged(String)
+ void onPasswordChange(String)
+ void onUsernameChange(String)
- Boolean checkParams(Boolean)
+ void login()
+ void register()
+ void logout()
}


class com.omasba.clairaud.presentation.auth.state.AuthUiState {
}
class com.omasba.clairaud.presentation.store.model.StoreViewModel {
+  presets
+  TAG
+  presetsLoaded
-  _selectedTags
+  selectedTags
-  _query
+  query
+  favPresets
-  _filterByFavorites
+  filterByFavorites
-  _showUserPresets
+  showUserPresets
+ StateFlow<List<EqPreset>> favoritePresets
+ StateFlow<List<EqPreset>> filteredPresets
+ void onQueryChanged(String)
+ void toggleFavoriteFilter()
+ void toggleShowUserPresets()
+ void onTagSelected(Tag)
+ void fetchPresets()
+ void onTagRemoved(Tag)
}


class com.omasba.clairaud.presentation.store.state.Tag {
+ Boolean equals(Any?)
+ Int hashCode()
}

class com.omasba.clairaud.presentation.home.state.EqualizerUiState {
}
class com.omasba.clairaud.presentation.auth.model.EditViewModel {
-  USERNAME_MAX_DIM
-  _uiState
+  uiState
+ void onUsernameChanged(String)
+ void onEmailChanged(String)
+ void updateUserProfile()
}


class com.omasba.clairaud.presentation.store.state.EqPreset {
}
class com.omasba.clairaud.presentation.home.model.EqualizerViewModel {
+ String TAG
+  eqState
+ void setBand(Int,Short)
+ void newBands(ArrayList<Pair<Int, Short>>)
+ void toggleEq()
}


class com.omasba.clairaud.presentation.auth.state.UserProfileDTO {
}
class com.omasba.clairaud.presentation.auth.state.UserProfile {
}
class com.omasba.clairaud.presentation.auth.state.AccountState {
}
class com.omasba.clairaud.presentation.store.state.TopTags {
}
class com.omasba.clairaud.presentation.home.model.AddPresetViewModel {
-  _eqPreset
+  eqPreset
-  _showError
+  showError
-  TAG_MAX_DIM
+ void changePreset(EqPreset)
+ void updatePresetName(String)
+ void addTag(Tag)
+ void removeTag(Tag)
+ Boolean confirmPreset(ArrayList<Pair<Int,Short>>)
}




androidx.lifecycle.ViewModel <|-- com.omasba.clairaud.presentation.auth.model.AuthViewModel
androidx.lifecycle.ViewModel <|-- com.omasba.clairaud.presentation.store.model.StoreViewModel
androidx.lifecycle.ViewModel <|-- com.omasba.clairaud.presentation.auth.model.EditViewModel
androidx.lifecycle.ViewModel <|-- com.omasba.clairaud.presentation.home.model.EqualizerViewModel
androidx.lifecycle.ViewModel <|-- com.omasba.clairaud.presentation.home.model.AddPresetViewModel
@enduml